2006-06-03  John Luke  <john.luke@gmail.com> 

	* X11DesktopColors.cs: dllimport the exact gtk and gdk versions
	so the colors work without dev packages
	
2006-06-02  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs 
	  - Select: Implemented to just use activate. Seems to match MS 
	    behaviour closest. Documented to only do actual control walking 
	    based on it's parameters if in a container control so I moved 
	    the code there.
	  - Removed selection check logic from our internal Select() method
	* ContainerControl.cs:
	  - Select: Moved selection logic from Control here, since MS documents
	    that containers obey the bool arguments. No longer calling base

2006-06-02  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: If the selected node isn't changed when we get
	focus update the previously selected node so that we see the
	selection box.

2006-06-02  Mike Kestner  <mkestner@novell.com>

	* ComboBox.cs: restructure grab and general mouse event handling.
	Make the composite control raise mouse events like it was a single
	control for leaves/enters/motion/up/down events.  fix dropdown list
	coordinate mangling and refactor it into the scrollbar subclass to
	reduce code duplication.  Fixes #78282 #78361 and #78457.

2006-06-02  Mike Kestner  <mkestner@novell.com>

	* ScrollBar.cs: remove Capture setting/clearing, as it happens
	automatically in the Control.WndProc.

2006-06-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileDialog.cs: fix crash when running SharpChess, which sets the
	FilterIndex to 2 with only one Filter.

2006-06-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ToolBar.cs: add SizeSpecified property.
	* ToolBarButton.cs: when the ButtonSize is calculated by the container,
	try to figure out our real size, otherwise fallback to what the
	container says.

2006-06-01  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs (DefWndProc): WM_MOUSEWHEEL needs to be passed up